--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="./estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/
 libs/animate.css/4.1.1/animate.min.css">
-    <link rel="shorcut icon" href="../iconos y logo/android-chrome-192x192.png">
+    <link rel="shorcut icon" href="./iconos y logo/android-chrome-192x192.png">
     <title>Mise en place</title>
 </head>
 <body>
     <header id="top">
         <div class="logo">
-            <img class="logo1 animate__animated animate__zoomInDown" src="../iconos y logo/logogrande.png" alt="logomise">
+            <img class="logo1 animate__animated animate__zoomInDown" src="./logogrande.png" alt="logomise">
         </div>
         <nav class="navind">
             <ul class="menu">
@@ -42,12 +42,12 @@ libs/animate.css/4.1.1/animate.min.css">
                 Nuestras especialidades
             </h3>
             <div class="gal">
-                <img src="../imagenes/ne1.jpg" height="250px" width="250px" alt="torta1">
-                <img src="../imagenes/ne2.jpg" height="250px" width="250px" alt="garnache">
-                <img src="../imagenes/ne3.jpg" height="250px" width="250px" alt="torta3">
-                <img src="../imagenes/ne4.jpg" height="250px" width="250px" alt="choco">
-                <img src="../imagenes/ne5.jpg" height="250px" width="250px" alt="torta 5">
-                <img src="../imagenes/ne6.jpg" height="250px" width="250px" alt="torta6">
+                <img src="./ne1.jpg" height="250px" width="250px" alt="torta1">
+                <img src="./ne2.jpg" height="250px" width="250px" alt="garnache">
+                <img src="./ne3.jpg" height="250px" width="250px" alt="torta3">
+                <img src="./ne4.jpg" height="250px" width="250px" alt="choco">
+                <img src="./ne5.jpg" height="250px" width="250px" alt="torta 5">
+                <img src="./ne6.jpg" height="250px" width="250px" alt="torta6">
             </div>    
 
         </section>
@@ -74,9 +74,9 @@ libs/animate.css/4.1.1/animate.min.css">
         <div class="redes">
        
             <ul class="sociales">
-                <li><a href="https://www.facebook.com/Mise.en.Place.Reposteria?ref=py_c"><img src="../iconosredes/fe.jpg" width="20" height="80" ></a></li>
-                <li><a href="https://www.instagram.com/miseenplace.reposteria/?hl=es-la"><img src="../iconosredes/instagram_macos_bigsur_icon_190067.png" width="20" height="60" ></a></li>
-                <li><a href="https://wa.me//5491132845316"><img src="../iconosredes/wateste.png" width="45" height="45" ></a></li>
+                <li><a href="https://www.facebook.com/Mise.en.Place.Reposteria?ref=py_c"><img src="./fe.jpg" width="20" height="80" ></a></li>
+                <li><a href="https://www.instagram.com/miseenplace.reposteria/?hl=es-la"><img src="./instagram_macos_bigsur_icon_190067.png" width="20" height="60" ></a></li>
+                <li><a href="https://wa.me//5491132845316"><img src="./wateste.png" width="45" height="45" ></a></li>
             </ul>
     
         </div>
