--- a/nosotros.html
+++ b/nosotros.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./estilo.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="shorcut icon" href="../iconos y logo/android-chrome-192x192.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/
+libs/animate.css/4.1.1/animate.min.css">
+    <link rel="shorcut icon" href="./iconos y logo/android-chrome-192x192.png">
     <title>Nosotros</title>
 </head>
 <body>
@@ -38,7 +39,7 @@
             </h2>
             <section>
                 <div class="narda" >
-                    <img src="../imagenes/nar.jpg" height="300px" width="500px" >
+                    <img src="./nar.jpg" height="300px" width="500px" >
                 </div>
             </section>
             <br>
@@ -62,9 +63,9 @@
         <div class="redes">
        
             <ul class="sociales">
-                <li><a href="https://www.facebook.com/Mise.en.Place.Reposteria?ref=py_c"><img src="../iconosredes/fe.jpg" width="20" height="80" ></a></li>
-                <li><a href="https://www.instagram.com/miseenplace.reposteria/?hl=es-la"><img src="../iconosredes/instagram_macos_bigsur_icon_190067.png" width="20" height="60" ></a></li>
-                <li><a href="https://wa.me//5491132845316"><img src="../iconosredes/wateste.png" width="45" height="45" ></a></li>
+                <li><a href="https://www.facebook.com/Mise.en.Place.Reposteria?ref=py_c"><img src="./fe.jpg" width="20" height="80" ></a></li>
+                <li><a href="https://www.instagram.com/miseenplace.reposteria/?hl=es-la"><img src="./instagram_macos_bigsur_icon_190067.png" width="20" height="60" ></a></li>
+                <li><a href="https://wa.me//5491132845316"><img src="./wateste.png" width="45" height="45" ></a></li>
             </ul>
     
         </div>
