--- a/nosotros.html
+++ b/nosotros.html
@@ -14,15 +14,15 @@ libs/animate.css/4.1.1/animate.min.css">
     
     <header id="top">
         <div class="logo">
-            <img class="logo1 animate__animated animate__zoomInDown" src="../iconos y logo/logogrande.png" alt="logomise">
+            <img class="logo1 animate__animated animate__zoomInDown" src="./logogrande.png" alt="logomise">
         </div>
         <nav class="navind">
             <ul class="menu">
                 <li><a href="index.html">index</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="panaderia.html">Panaderia</a></li>
+                <li><a href="Panaderia.html">Panaderia</a></li>
                 <li><a href="reposteria.html">Reposteria</a></li>
-                <li><a href="tartas.html">Tartas</a></li>
+                <li><a href="Tartas.html">Tartas</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>    
     
