--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ libs/animate.css/4.1.1/animate.min.css">
             <ul class="menu">
                 <li><a href="index.html">index</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a href="panaderia.html">Panaderia</a></li>
+                <li><a href="Panaderia.html">Panaderia</a></li>
                 <li><a href="reposteria.html">Reposteria</a></li>
-                <li><a href="tartas.html">Tartas</a></li>
+                <li><a href="Tartas.html">Tartas</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>    
     
