nuevo commit elimina imagen1

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ libs/animate.css/4.1.1/animate.min.css">
                 Nuestras especialidades
             </h3>
             <div class="gal">
-                <img src="/imagenes/ne1.jpg" height="250px" width="250px" alt="torta1">
+                <img src="imagenes/ne1.jpg" height="250px" width="250px" alt="torta1">
                 <img src="./ne2.jpg" height="250px" width="250px" alt="garnache">
                 <img src="./ne3.jpg" height="250px" width="250px" alt="torta3">
                 <img src="./ne4.jpg" height="250px" width="250px" alt="choco">
