nuevo commit elimina logo ghrande y agrega ref1

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ libs/animate.css/4.1.1/animate.min.css">
 <body>
     <header id="top">
         <div class="logo">
-            <img class="logo1 animate__animated animate__zoomInDown" src="./logogrande.png" alt="logomise">
+            <img class="logo1 animate__animated animate__zoomInDown" src="iconos_y_logo/logogrande.png" alt="logomise">
         </div>
         <nav class="navind">
             <ul class="menu">
