--- a/Tartas.html
+++ b/Tartas.html
@@ -66,22 +66,22 @@ libs/animate.css/4.1.1/animate.min.css">
             <img src="imagenes/ta8.jpg" height="250px" width="250px" alt="pana">
         </div>
         <div>
-            <img src="./ta9.jpg" height="250px" width="250px" alt="pana">
+            <img src="imagenes/ta9.jpg" height="250px" width="250px" alt="pana">
         </div>
         <div>
-            <img src="./ta10.jpg" height="250px" width="250px" alt="pana">
+            <img src="imagenes/ta10.jpg" height="250px" width="250px" alt="pana">
         </div>
         <div>
-            <img src="./ta11.jpg" height="250px" width="250px" alt="pana">
+            <img src="imagenes/ta11.jpg" height="250px" width="250px" alt="pana">
         </div>
         <div>
-            <img src="./ta12.jpg" height="250px" width="250px" alt="pana">
+            <img src="imagenes/ta12.jpg" height="250px" width="250px" alt="pana">
         </div>
         <div>
-            <img src="./ta13.jpg" height="250px" width="250px" alt="pana">
+            <img src="imagenes/ta13.jpg" height="250px" width="250px" alt="pana">
         </div>
         <div>
-            <img src="./ta14.jpg" height="250px" width="250px" alt="pana">
+            <img src="imagenes/ta14.jpg" height="250px" width="250px" alt="pana">
         </div>
         <br>
     
