--- a/reposteria.html
+++ b/reposteria.html
@@ -57,7 +57,7 @@ libs/animate.css/4.1.1/animate.min.css">
             <img src="imagenes/tarta-super-choco-5-200x200.jpg" alt="pana">
         </div>
         <div>
-            <img src="./Torta-de-chocolate-200x200.jpg" alt="pana">
+            <img src="imagenes/Torta-de-chocolate-200x200.jpg" alt="pana">
         </div>
         <div>
             <img src="imagenes/t1.jpg" height="250px" width="250px" alt="pana">
