--- a/reposteria.html
+++ b/reposteria.html
@@ -17,6 +17,8 @@ libs/animate.css/4.1.1/animate.min.css">
             <img class="logo1 animate__animated animate__zoomInDown" src="iconos_y_logo/logogrande.png" alt="logomise">
         </div>
         <nav class="navind">
+            <input type="checkbox" id="checkbox_cambio" />
+                <label for="checkbox_cambio" class="hamburger">&#9776;</label>
             <ul class="menu">
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
