--- a/contacto.html
+++ b/contacto.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <meta name="description" content="reposteria,tortas,panaderia,mise en place">
+   <meta name="keywords"  content="Mi nombre es Maria Fabiana Aguirre y estoy graduada en la escuela de reposteria de Narda lepes.Vivo en Bella Vista San Miguel y hace 5 años me dedico a la pasteleria, reposteria y panaderia.
+   Trabajo con productos frescos de primera calidad, y principalmente hago tortas de cumpleaños y cookies todo personalizado y a pedido como guste el cliente.">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
