--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <meta name="description" content="reposteria,tortas,panaderia,mise en place">
+   <meta name="keywords"  content="Mi nombre es Maria Fabiana Aguirre y estoy graduada en la escuela de reposteria de Narda lepes.Vivo en Bella Vista San Miguel y hace 5 años me dedico a la pasteleria, reposteria y panaderia.
+   Trabajo con productos frescos de primera calidad, y principalmente hago tortas de cumpleaños y cookies todo personalizado y a pedido como guste el cliente.">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -76,7 +79,7 @@ libs/animate.css/4.1.1/animate.min.css">
         <div class="redes">
        
             <ul class="sociales">
-                <li><a href="https://www.facebook.com/Mise.en.Place.Reposteria?ref=py_c"><img src="./iconosRedes/fe.jpg" width="20" height="80" ></a></li>
+                <li><a href="https://www.facebook.com/Mise.en.Place.Reposteria?ref=py_c"><img src="iconosRedes/fe.jpg" width="20" height="80" ></a></li>
                 <li><a href="https://www.instagram.com/miseenplace.reposteria/?hl=es-la"><img src="./iconosRedes/instagram_macos_bigsur_icon_190067.png" width="20" height="60" ></a></li>
                 <li><a href="https://wa.me//5491132845316"><img src="./iconosRedes/wateste.png" width="45" height="45" ></a></li>
             </ul>
