--- a/Panaderia.html
+++ b/Panaderia.html
@@ -95,9 +95,9 @@ libs/animate.css/4.1.1/animate.min.css">
         <div class="redes">
        
             <ul class="sociales">
-                <li><a href="https://www.facebook.com/Mise.en.Place.Reposteria?ref=py_c"><img src="iconosRedes/fe.jpg" width="20" height="80" ></a></li>
-                <li><a href="https://www.instagram.com/miseenplace.reposteria/?hl=es-la"><img src="iconosRedes/instagram_macos_bigsur_icon_190067.png" width="20" height="60" ></a></li>
-                <li><a href="https://wa.me//5491132845316"><img src="iconosRedes/wateste.png" width="45" height="45" ></a></li>
+                <li><a href="https://www.facebook.com/Mise.en.Place.Reposteria?ref=py_c"><img src="./iconosRedes/fe.jpg" width="20" height="80" ></a></li>
+                <li><a href="https://www.instagram.com/miseenplace.reposteria/?hl=es-la"><img src="./iconosRedes/instagram.png" width="20" height="60" ></a></li>
+                <li><a href="https://wa.me//5491132845316"><img src="./iconosRedes/whatsapp.png" width="45" height="45" ></a></li>
             </ul>
     
         </div>
