--- a/contacto.html
+++ b/contacto.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/
 libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="shorcut icon" href="iconos_y_logo/android-chrome-192x192.png">
     <title>Contacto</title>
 </head>
@@ -79,9 +80,9 @@ libs/animate.css/4.1.1/animate.min.css">
         <div class="redes">
        
             <ul class="sociales">
-                <li><a href="https://www.facebook.com/Mise.en.Place.Reposteria?ref=py_c"><img src="./iconosRedes/fe.jpg" width="20" height="80" ></a></li>
-                <li><a href="https://www.instagram.com/miseenplace.reposteria/?hl=es-la"><img src="./iconosRedes/instagram.png" width="20" height="60" ></a></li>
-                <li><a href="https://wa.me//5491132845316"><img src="./iconosRedes/whatsapp.png" width="45" height="45" ></a></li>
+                <li><a href="https://www.facebook.com/Mise.en.Place.Reposteria?ref=py_c"><i class="fa fa-facebook "></i></a></li>
+                <li><a href="https://www.instagram.com/miseenplace.reposteria/?hl=es-la"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="https://wa.me//5491132845316"><i class="fa fa-whatsapp"></i></a></li>
             </ul>
     
         </div>
